public/stylesheets/scenarios.css
/* ... */
  body#scenarios_new section#questions nav, body#scenarios_create section#questions nav {
    background: #eeeeee;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$first', endColorstr='$second');
    background: -webkit-gradient(linear, left top, left bottom, from(#fdfdfd), to(#eeeeee));
    background: -moz-linear-gradient(top, #fdfdfd, #eeeeee);
    border: 1px solid #eee;
    display: block;
    text-align: center;
    height: 20px;
    padding: 4px;
    font-size: 10px; }
    body#scenarios_new section#questions nav a, body#scenarios_create section#questions nav a {
      margin: 0 5px;
      color: #bbbbbb;
      font-weight: bold; }
    body#scenarios_new section#questions nav#up a.active, body#scenarios_create section#questions nav#up a.active {
      color: red; }
    body#scenarios_new section#questions nav#up a:hover, body#scenarios_create section#questions nav#up a:hover {
      color: #d70000; }
    body#scenarios_new section#questions nav#down, body#scenarios_create section#questions nav#down {
      clear: both; }
      body#scenarios_new section#questions nav#down a:hover, body#scenarios_create section#questions nav#down a:hover {
        color: #d70000; }
  body#scenarios_new section#questions .question, body#scenarios_create section#questions .question {
    padding: 10px; }
    body#scenarios_new section#questions .question .information, body#scenarios_create section#questions .question .information {
      margin-bottom: 5px; }
      body#scenarios_new section#questions .question .information strong, body#scenarios_create section#questions .question .information strong {
        font-weight: bold; }
      body#scenarios_new section#questions .question .information a, body#scenarios_create section#questions .question .information a {
        color: blue; }
    body#scenarios_new section#questions .question .number, body#scenarios_create section#questions .question .number {
      font-weight: bold;
      width: 5%;
      float: left; }
    body#scenarios_new section#questions .question .question_text, body#scenarios_create section#questions .question .question_text {
      font-weight: bold; }
    body#scenarios_new section#questions .question ol.answers, body#scenarios_create section#questions .question ol.answers {
      padding-left: 20px;
      margin-left: 0;
      border-top: 1px solid #cccccc;
      margin-top: 5px;
      padding-top: 5px; }
      body#scenarios_new section#questions .question ol.answers li.answer, body#scenarios_create section#questions .question ol.answers li.answer {
        margin-left: 0;
        font-weight: bold;
        list-style-type: upper-alpha;
        margin-bottom: 15px;
        clear: both; }
        body#scenarios_new section#questions .question ol.answers li.answer label, body#scenarios_create section#questions .question ol.answers li.answer label {
          font-weight: normal; }
          body#scenarios_new section#questions .question ol.answers li.answer label .text, body#scenarios_create section#questions .question ol.answers li.answer label .text {
            float: right;
            width: 100%;
            margin-bottom: 15px; }
          body#scenarios_new section#questions .question ol.answers li.answer label:hover, body#scenarios_create section#questions .question ol.answers li.answer label:hover {
            color: #ff7f00;
            cursor: pointer; }
        body#scenarios_new section#questions .question ol.answers li.answer input[type=radio], body#scenarios_create section#questions .question ol.answers li.answer input[type=radio] {
          display: none; }
        body#scenarios_new section#questions .question ol.answers li.answer.active, body#scenarios_create section#questions .question ol.answers li.answer.active {
          color: red; }
    body#scenarios_new section#questions .question #user_details .item, body#scenarios_create section#questions .question #user_details .item {
      padding: 3px; }
      body#scenarios_new section#questions .question #user_details .item .field_with_errors, body#scenarios_create section#questions .question #user_details .item .field_with_errors {
        background-color: #f6182c;
        float: left;
        position: relative;
        height: 36px; }
      body#scenarios_new section#questions .question #user_details .item label, body#scenarios_create section#questions .question #user_details .item label {
        display: block;
        float: left;
        width: 60px;
        padding: 5px; }
      body#scenarios_new section#questions .question #user_details .item input, body#scenarios_create section#questions .question #user_details .item input {
        display: block;
        float: left;
        padding: 5px;
        width: 200px;
        margin: 4px; }
      body#scenarios_new section#questions .question #user_details .item input[type=submit], body#scenarios_create section#questions .question #user_details .item input[type=submit] {
        margin-left: 74px;
        width: 214px;
        border: 1px solid #cccccc;
        margin-bottom: 20px; }
        body#scenarios_new section#questions .question #user_details .item input[type=submit]:hover, body#scenarios_create section#questions .question #user_details .item input[type=submit]:hover {
          background-color: #f69409; }
  body#scenarios_new section#questions #notice, body#scenarios_create section#questions #notice {
    display: none;
    text-align: center;
    color: red; }
body#scenarios_new .question_popup h1, body#scenarios_create .question_popup h1 {
  font-size: 1.5em;
  font-weight: bold;
  margin-bottom: 0.7em; }
/* ... */

